--- a/web/instagram/css/auth.css
+++ b/web/instagram/css/auth.css
@@ -45,9 +45,14 @@ body {
     height: 755px;
 }
 
+.f-container {
+
+}
+
 .item-box {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     margin-bottom: 10px;
     border: 1px solid #dbdbdb;
@@ -140,12 +145,12 @@ body {
     font-weight: 500;
 
     background-color: rgb(0, 149, 246);
+    cursor: pointer;
 }
 
 .hr-sect {
     display: flex;
     align-items: center;
-    color: #dbdbdb;
 }
 
 .hr-sect::before,
@@ -154,8 +159,6 @@ body {
     flex-grow: 1;
     background-color: #dbdbdb;
     height: 1px;
-    font: 0px;
-    line-height: 0px;
 }
 
 .hr-sect span {
@@ -170,7 +173,21 @@ body {
     font-weight: 500;
     word-spacing: 3px;
 }
-.facebook-login span i{
+
+.facebook-login span i {
     font-size: 18px;
     margin: 0px 5px;
+}
+
+.signup-items p {
+    margin: 15px;
+}
+
+.signup-items p a {
+    font-weight: 500;
+    color: #0095f6;
+}
+
+.r-content-footer {
+    height: 102px;
 }
