--- a/web/instagram/css/style.css
+++ b/web/instagram/css/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Gugi&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-* { 
+* {
     font-family: 'Noto Sans KR', sans-serif;
 
     box-sizing: border-box;
@@ -8,9 +8,14 @@
     padding: 0px;
 
     font-size: 14px;
+    font-weight: 300;
 }
 
-a{
+body {
+    background-color: #fafafa;
+}
+
+a {
     text-decoration: none;
     color: black;
 }
