--- a/web/re_web/re_htmlStudy/re_instagram/css/re_auth.css
+++ b/web/re_web/re_htmlStudy/re_instagram/css/re_auth.css
@@ -13,6 +13,7 @@ body{
 .m-container{
     display: flex;
     width: 100%; /*가운데 정렬 -> 아티클에서 양쪽 오토*/
+    background-color: rgb(250, 250, 250);
 }
 
 .a-container{
@@ -25,6 +26,7 @@ body{
     width: 935px;
     height: 799px;
 
+    background-color: rgb(250, 250, 250);
 }
 
 .l-content{
@@ -39,13 +41,161 @@ body{
 }
 
 .r-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     margin-top: 12px;
     width: 350px;
     height: 755px;
-
-    background-color: blue;
 }
 
-.f-container{
+
+.item-box{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 10px 0px;
+    border: 1px solid #dbdbdb;
+    margin-bottom: 10px;
+
+    background-color: rgb(255, 255, 255);
 }
+
+.b-logo{
+    display: flex;
+    justify-items: center;
+
+    width: 175px;
+    height: 51px;
+    margin: 22px auto 12px;
+}
+
+.items-group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.items-group > a{
+    margin-top: 12px;
+    font-size: 12px;
+    color: #385185;
+}
+
+.items-group-form{
+    display: flex;
+    flex-direction: column;
+    margin-top: 24px;
+}
+
+.input-items{
+    position: relative;
+    text-align: center;
+    margin: 0px 40px 6px;
+}
+
+.items-group-form .input-items:nth-last-child(3) {
+    margin-top: 8px;
+}
+
+.items-group-form .input-items:nth-last-child(2) {
+    margin-top: 10px;
+    margin-bottom: 18px;
+}
+
+.items-group-form .input-items:nth-last-child(1) {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.input-items label{
+    position: absolute;
+    top: 10px;
+    left: 8px;
+    font-size: 11px;
+    font-weight: 300;
+    color: rgb(142, 142, 142);
+}
+.input-items input{
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+    outline: none;
+    padding: 16px 0px 2px 8px;
+    width: 268px;
+    height: 38px;
+
+    font-size: 12px;
+    background-color: #fafafa;
+}
+
+.input-items input[type=password]{
+    letter-spacing: 1px;
+}
+
+.input-items button{
+    width: 100%;
+    height: 30px;
+
+    border: none;
+    border-radius: 4px;
+
+    color: white;
+    font-weight: 500;
+
+    background-color: rgb(0, 149, 246);
+    cursor: pointer;
+}
+
+.hr-sect{
+    display: flex;
+    align-items: center;
+    color: rgb(142, 142, 142);
+}
+
+.hr-sect::before,
+.hr-sect::after{
+    content: "";
+    flex-grow: 1;
+    background-color: #dbdbdb;
+    height: 1px;
+}
+
+.hr-sect span{
+    margin: 0px 15px;
+    line-height: 15px;
+    color: #8e8e8e;
+    font-weight: 500;;
+}
+
+.facebook-login span{
+    color: #385185;
+    font-weight: 500;
+    word-spacing: 3px;
+}
+
+.facebook-login span i{
+    font-size: 18px;
+    margin: 0px 5px;
+    
+}
+
+.signup-items p {
+    margin: 15px;
+}
+
+.signup-items p a {
+    color: #0095f6;
+    font-weight: 500;
+}
+
+.r-content-footer{
+    height: 102px;
+}
+.r-content-footer img{
+    width: 100%;
+}
+
+
