--- a/web/re_web/re_htmlStudy/re_instagram/css/re_auth.css
+++ b/web/re_web/re_htmlStudy/re_instagram/css/re_auth.css
@@ -115,10 +115,21 @@ body{
     position: absolute;
     top: 10px;
     left: 8px;
+    font-size: 13px;
+    font-weight: 300;
+    color: rgb(142, 142, 142);
+    transition: 0.2s;
+}
+
+/* .input-items label{
+    position: absolute;
+    top: 2px;
+    left: 8px;
     font-size: 11px;
     font-weight: 300;
     color: rgb(142, 142, 142);
-}
+} */
+
 .input-items input{
     border: 1px solid #dbdbdb;
     border-radius: 3px;
